--- a/src/Views/TextDiffView.axaml
+++ b/src/Views/TextDiffView.axaml
@@ -23,6 +23,7 @@
                                        DeletedHighlightBrush="{DynamicResource Brush.Diff.DeletedHighlight}"
                                        IndicatorForeground="{DynamicResource Brush.FG2}"
                                        FontFamily="{DynamicResource Fonts.Monospace}"
+                                       FontSize="{Binding Source={x:Static vm:Preference.Instance}, Path=EditorFontSize}"
                                        UseSyntaxHighlighting="{Binding Source={x:Static vm:Preference.Instance}, Path=UseSyntaxHighlighting}"
                                        WordWrap="{Binding Source={x:Static vm:Preference.Instance}, Path=EnableDiffViewWordWrap}"
                                        ShowHiddenSymbols="{Binding Source={x:Static vm:Preference.Instance}, Path=ShowHiddenSymbolsInDiffView}"
@@ -44,6 +45,7 @@
                                            DeletedHighlightBrush="{DynamicResource Brush.Diff.DeletedHighlight}"
                                            IndicatorForeground="{DynamicResource Brush.FG2}"
                                            FontFamily="{DynamicResource Fonts.Monospace}"
+                                           FontSize="{Binding Source={x:Static vm:Preference.Instance}, Path=EditorFontSize}"
                                            UseSyntaxHighlighting="{Binding Source={x:Static vm:Preference.Instance}, Path=UseSyntaxHighlighting}"
                                            WordWrap="False"
                                            ShowHiddenSymbols="{Binding Source={x:Static vm:Preference.Instance}, Path=ShowHiddenSymbolsInDiffView}"
@@ -64,6 +66,7 @@
                                            DeletedHighlightBrush="{DynamicResource Brush.Diff.DeletedHighlight}"
                                            IndicatorForeground="{DynamicResource Brush.FG2}"
                                            FontFamily="{DynamicResource Fonts.Monospace}"
+                                           FontSize="{Binding Source={x:Static vm:Preference.Instance}, Path=EditorFontSize}"
                                            UseSyntaxHighlighting="{Binding Source={x:Static vm:Preference.Instance}, Path=UseSyntaxHighlighting}"
                                            WordWrap="False"
                                            ShowHiddenSymbols="{Binding Source={x:Static vm:Preference.Instance}, Path=ShowHiddenSymbolsInDiffView}"
