--- a/src/Views/Preference.axaml
+++ b/src/Views/Preference.axaml
@@ -121,7 +121,7 @@
           <TabItem.Header>
             <TextBlock Classes="tab_header" Text="{DynamicResource Text.Preference.Appearance}"/>
           </TabItem.Header>
-          <Grid Margin="8" RowDefinitions="32,32,32,32,32,32,32,Auto" ColumnDefinitions="Auto,*">
+          <Grid Margin="8" RowDefinitions="32,32,32,32,32,32,32,32,Auto" ColumnDefinitions="Auto,*">
             <TextBlock Grid.Row="0" Grid.Column="0"
                        Text="{DynamicResource Text.Preference.Appearance.Theme}"
                        HorizontalAlignment="Right"
@@ -170,10 +170,22 @@
                            Value="{Binding DefaultFontSize, Mode=TwoWay}"/>
 
             <TextBlock Grid.Row="4" Grid.Column="0"
+                       Text="{DynamicResource Text.Preference.Appearance.EditorFontSize}"
+                       HorizontalAlignment="Right"
+                       Margin="0,0,16,0"/>
+            <NumericUpDown Grid.Row="4" Grid.Column="1"
+                           Minimum="10" Maximum="18" Increment="0.5"
+                           Height="28"
+                           Padding="4"
+                           BorderThickness="1" BorderBrush="{DynamicResource Brush.Border1}"
+                           CornerRadius="3"
+                           Value="{Binding EditorFontSize, Mode=TwoWay}"/>
+
+            <TextBlock Grid.Row="5" Grid.Column="0"
                        Text="{DynamicResource Text.Preference.Appearance.ThemeOverrides}"
                        HorizontalAlignment="Right"
                        Margin="0,0,16,0"/>
-            <TextBox Grid.Row="4" Grid.Column="1"
+            <TextBox Grid.Row="5" Grid.Column="1"
                      Height="28"
                      CornerRadius="3"
                      Text="{Binding ThemeOverrides, Mode=TwoWay}">
@@ -184,16 +196,16 @@
               </TextBox.InnerRightContent>
             </TextBox>
 
-            <CheckBox Grid.Row="5" Grid.Column="1"
+            <CheckBox Grid.Row="6" Grid.Column="1"
                       Content="{DynamicResource Text.Preference.Appearance.OnlyUseMonoFontInEditor}"
                       IsChecked="{Binding OnlyUseMonoFontInEditor, Mode=TwoWay}"/>
 
-            <CheckBox Grid.Row="6" Grid.Column="1"
+            <CheckBox Grid.Row="7" Grid.Column="1"
                       Height="32"
                       Content="{DynamicResource Text.Preference.Appearance.UseFixedTabWidth}"
                       IsChecked="{Binding Source={x:Static vm:Preference.Instance}, Path=UseFixedTabWidth, Mode=TwoWay}"/>
 
-            <CheckBox Grid.Row="7" Grid.Column="1"
+            <CheckBox Grid.Row="8" Grid.Column="1"
                       Height="32"
                       Content="{DynamicResource Text.Preference.Appearance.UseNativeWindowFrame}"
                       IsChecked="{Binding Source={x:Static vm:Preference.Instance}, Path=UseSystemWindowFrame, Mode=OneTime}"
